# cropty

./: .gitignore  CHANGELOG.md  README.md  cropty.cabal  keyfile.public
.github/workflows/: haskell.yml
src/: App.hs  Cropty.hs
test/: Test.hs
