cabal-version:       2.4

name:                cropty
version:             0.1.0.0
synopsis:            Encryption and decryption
description:         Encryption and decryption.
homepage:            https://github.com/SamuelSchlesinger/cropty
bug-reports:         https://github.com/SamuelSchlesinger/cropty/issues
license:             MIT
license-file:        LICENSE
author:              Samuel Schlesinger
maintainer:          sgschlesinger@gmail.com
copyright:           2019 Samuel Schlesinger
category:            System, CLI, Options, Parsing
extra-source-files:  CHANGELOG.md, README.md
tested-with:         GHC ==8.6.3 || ==8.8.3 || ==8.10.1

source-repository head
  type: git 
  location: https://github.com/samuelschlesinger/cropty

executable cropty
  main-is:             Main.hs
  build-depends:       base >=4.12 && < 5, cropty
  hs-source-dirs:      app
  default-language:    Haskell2010

library
  exposed-modules:     Cropty, App
  build-depends:       base >=4.12 && < 5,
                       bytestring >=0.10 && <1,
                       commander-cli >=0.10.1.2,
                       cryptonite >=0.27,
                       binary >=0.8,
                       unliftio >=0.2
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test-cropty
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base >= 4.12 && < 5,
                       hedgehog >=1.0,
                       cropty
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts "-with-rtsopts=-N -T" -O2
